# Demo-Smart-Sewing-Monitor-with-Raspberry-Pi-5

./: .gitignore  CMakeLists.txt
Training_Edge_AI/: Create Demo Data.py  sewing_classifier.pkl  test_data.py  train_model.py
iot_dashboard/core/: settings.py  urls.py
iot_dashboard/sensor_data/: models.py  urls.py  views.py
iot_dashboard/sensor_data/migrations/: 0001_initial.py  0002_remove_sensorreading_humidity_and_more.py  0003_sensorreading_ecur_var_sensorreading_evib_var_and_more.py
iot_dashboard/sensor_data/templates/sensor_data/: dashboard.html
main/: CMakeLists.txt  DA2.c
main/app/: data_collector.c  data_collector.h  machine_info.c  machine_info.h
main/bsp/: bsp_adc.c  bsp_adc.h  bsp_gpio.c  bsp_gpio.h  bsp_i2c.c  bsp_i2c.h
main/drivers/: ds3132.c  ds3132.h  eeprom_24c02.c  eeprom_24c02.h  mpu6050.c  mpu6050.h
main/edge/: edge_task.c  edge_task.h
main/protocol/: RS485.c  RS485.h  USB.c  USB.h
main/sensors/: acs712.c  acs712.h  hall_sensor.c  hall_sensor.h
